tests/ui/compile-fail/zeroable/with_comma.stderr
error: unexpected token
  --> tests/ui/compile-fail/zeroable/with_comma.rs:13:29
   |
13 |         ..Zeroable::zeroed(),
   |                             ^
